web-service/src/static/style.css
body {
  font-size: .875rem;
}

/*
 * Navbar
 */

.navbar-main {
  padding-top: .75rem;
  padding-bottom: .75rem;
  font-size: 1rem;
  background-color: rgba(0, 0, 0, .25);
  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
}

/* => md */
@media (min-width: 768px) {
  .navbar-main {
    flex-grow: unset;
    flex-basis: auto!important;
    width: 180px;
  }
}

.navbar .form-control {
  padding: .75rem 1rem;
  border-width: 0;
  border-radius: 0;
}

.navbar-brand {
  padding-top: 0px;
  padding-bottom: 0px;
}

.form-control-dark:focus {
  border-color: transparent;
  box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
}

.sidebar {
  position: fixed;
  width: 180px;
  top: 0;
  bottom: 0;
  left: 0;
  z-index: 100; /* Behind the navbar */
  padding: 74px 0 0; /* Height of navbar with some extra padding */
  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
}

.sidebar-sticky {
  position: relative;
  top: 0;
  height: calc(100vh - 48px);
  overflow-x: hidden;
  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
}

@supports ((position: -webkit-sticky) or (position: sticky)) {
  .sidebar-sticky {
    position: -webkit-sticky;
    position: sticky;
  }
}

.sidebar .nav-link {
  font-weight: 500;
  color: #333;
}

/*
 * Content
 */

/* => md */
@media (min-width: 768px) {
  main {
    padding-left: 220px!important;
  }
}

/* < md */
.navbar-pushed {
  padding-top: 112px; /* Space for fixed navbar */
}

/* => md */
@media (min-width: 768px) {
  .navbar-pushed {
    padding-top: 74px; /* Space for fixed navbar */
  }
}

